# PrivateLens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTINUITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_MODELS.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  container.yml  release.yml
docs/: architecture.md  deep-analysis-and-roadmap.md  deploy-gaming-pc.md  macbook-status.md  privacy-guide.md  readme-product-design.md  search-recipes.md
docs/superpowers/plans/: 2026-07-03-phase-0-1-core-reliability.md
privatelens/: __init__.py  api.py  benchmark.py  cli.py  config.py  demo.py  errors.py  model_benchmark.py  watcher.py
privatelens/benchmarks/: __init__.py  search-quality-v1.json
privatelens/db/: __init__.py  schema.py
privatelens/db/migrations/: __init__.py
privatelens/extractors/: __init__.py  clip.py  clustering.py  detections.py  document.py  exif.py  faces.py  ocr.py  screenshot.py  sensitive.py  vlm.py
privatelens/integrations/: __init__.py  anythingllm.py  apple_photos.py  google_takeout.py  immich.py
privatelens/privacy/: __init__.py  audit.py  encrypt.py  guard.py
privatelens/search/: __init__.py  engine.py  evidence.py  queries.py  recipes.py  reranker.py
privatelens/utils/: __init__.py  fs.py  hashing.py  image_formats.py  thumbnails.py  time.py
privatelens/web/: index.html
results/benchmarks/: model-quality-v1.json  search-quality-v1.json
scripts/: download-models.py  setup.sh
tests/: test_heic_support.py  test_phase2_production.py  test_scale_reliability.py  test_smoke.py
