[project]
name = "privatelens"
version = "1.0.0"
description = "Local-first, read-only photo search sidecar with explainable hybrid search"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "PrivateLens contributors" }]
keywords = [
    "photo-search",
    "local-first",
    "privacy",
    "clip",
    "ocr",
    "sqlite-vec",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "click>=8.1,<9",
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "pillow>=11.0,<13",
    "numpy>=2.0,<3",
    "sqlite-vec>=0.1,<0.2",
    "imagehash>=4.3,<5",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "cryptography>=44.0,<50",
    "rich>=13.9,<16",
    "watchdog>=6.0,<7",
    "python-multipart>=0.0.17,<1",
    "jinja2>=3.1,<4",
    "pillow-heif>=1.1,<2",
]

[project.urls]
Homepage = "https://github.com/kenny2077/PrivateLens"
Documentation = "https://github.com/kenny2077/PrivateLens#readme"
Repository = "https://github.com/kenny2077/PrivateLens.git"
Issues = "https://github.com/kenny2077/PrivateLens/issues"
Changelog = "https://github.com/kenny2077/PrivateLens/blob/main/CHANGELOG.md"

[project.optional-dependencies]
core = []
ml = [
    "open-clip-torch>=2.24,<4",
    "torch>=2.5,<3",
    "torchvision>=0.20,<1",
    "rapidocr-onnxruntime==1.4.4",
    "insightface>=0.7,<2",
    "onnxruntime>=1.20,<2",
]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.8,<1",
    "mypy>=1.13,<3",
    "pre-commit>=4.0,<5",
]
full = [
    "open-clip-torch>=2.24,<4",
    "torch>=2.5,<3",
    "torchvision>=0.20,<1",
    "rapidocr-onnxruntime==1.4.4",
    "insightface>=0.7,<2",
    "onnxruntime>=1.20,<2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
privatelens = "privatelens.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "reference",
    "dist",
    "build",
]

[tool.hatch.build.targets.sdist]
include = [
    "/.dockerignore",
    "/.env.example",
    "/.github/ISSUE_TEMPLATE/*.md",
    "/.github/workflows/*.yml",
    "/.pre-commit-config.yaml",
    "/Dockerfile",
    "/privatelens",
    "/tests",
    "/docs/architecture.md",
    "/docs/assets",
    "/docs/deep-analysis-and-roadmap.md",
    "/docs/deploy-gaming-pc.md",
    "/docs/macbook-status.md",
    "/docs/privacy-guide.md",
    "/docs/search-recipes.md",
    "/results/benchmarks/*.json",
    "/README.md",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/SECURITY.md",
    "/SUPPORT.md",
    "/THIRD_PARTY_MODELS.md",
    "/THIRD_PARTY_LICENSES/**",
    "/docker-compose.yml",
    "/pyproject.toml",
    "/scripts",
    "/uv.lock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
